# oraculo-astrology

./: .dockerignore  Dockerfile  README.md  astrology.ipynb  docker-compose.yml  hello.py  http_api.py  pyproject.toml
backend/: POLITICA_PRIVACIDADE.md  __init__.py  astrological_subject.py  config.py  ephemeris_data.py  fetch_geonames.py  relationship_score.py  report.py  utilities.py
backend/aspects/: aspects_utils.py  natal_aspects.py  synastry_aspects.py
backend/charts/: charts_utils.py  kerykeion_chart_svg.py
backend/charts/templates/: chart.xml
backend/kr_types/: kr_models.py  settings_models.py
backend/settings/: config.json  kerykeion_settings.py
backend/tarot/: README.md
